--- a/DataProfiling.ipynb
+++ b/DataProfiling.ipynb
@@ -5,7 +5,7 @@
    "id": "d81b1459-2f31-4adf-8148-f2f7e28522da",
    "metadata": {},
    "source": [
-    "## Installing the dataprofiling lib"
+    "## Installing the Ydataprofiling lib"
    ]
   },
   {
@@ -276,137 +276,6 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "profile.to_file(\"data_profiling_report.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "bfdd2e80-3025-4fe2-8c7e-dc7402a84b5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas-profiling\n",
-      "  Downloading pandas_profiling-3.2.0-py2.py3-none-any.whl.metadata (21 kB)\n",
-      "Collecting joblib~=1.1.0 (from pandas-profiling)\n",
-      "  Downloading joblib-1.1.1-py2.py3-none-any.whl.metadata (5.2 kB)\n",
-      "Requirement already satisfied: scipy>=1.4.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (1.13.1)\n",
-      "Requirement already satisfied: pandas!=1.0.0,!=1.0.1,!=1.0.2,!=1.1.0,>=0.25.3 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (2.2.2)\n",
-      "Requirement already satisfied: matplotlib>=3.2.0 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (3.8.4)\n",
-      "Requirement already satisfied: pydantic>=1.8.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (2.5.3)\n",
-      "Requirement already satisfied: PyYAML>=5.0.0 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (6.0.1)\n",
-      "Requirement already satisfied: jinja2>=2.11.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (3.1.4)\n",
-      "Requirement already satisfied: markupsafe~=2.1.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (2.1.3)\n",
-      "Collecting visions==0.7.4 (from visions[type_image_path]==0.7.4->pandas-profiling)\n",
-      "  Downloading visions-0.7.4-py3-none-any.whl.metadata (5.9 kB)\n",
-      "Requirement already satisfied: numpy>=1.16.0 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (1.26.4)\n",
-      "Requirement already satisfied: htmlmin>=0.1.12 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (0.1.12)\n",
-      "Collecting missingno>=0.4.2 (from pandas-profiling)\n",
-      "  Downloading missingno-0.5.2-py3-none-any.whl.metadata (639 bytes)\n",
-      "Requirement already satisfied: phik>=0.11.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (0.12.4)\n",
-      "Collecting tangled-up-in-unicode==0.2.0 (from pandas-profiling)\n",
-      "  Downloading tangled_up_in_unicode-0.2.0-py3-none-any.whl.metadata (4.8 kB)\n",
-      "Requirement already satisfied: requests>=2.24.0 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (2.32.2)\n",
-      "Requirement already satisfied: tqdm>=4.48.2 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (4.66.4)\n",
-      "Requirement already satisfied: seaborn>=0.10.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (0.13.2)\n",
-      "Requirement already satisfied: multimethod>=1.4 in /opt/anaconda3/lib/python3.12/site-packages (from pandas-profiling) (1.12)\n",
-      "Requirement already satisfied: attrs>=19.3.0 in /opt/anaconda3/lib/python3.12/site-packages (from visions==0.7.4->visions[type_image_path]==0.7.4->pandas-profiling) (23.1.0)\n",
-      "Requirement already satisfied: networkx>=2.4 in /opt/anaconda3/lib/python3.12/site-packages (from visions==0.7.4->visions[type_image_path]==0.7.4->pandas-profiling) (3.2.1)\n",
-      "Requirement already satisfied: imagehash in /opt/anaconda3/lib/python3.12/site-packages (from visions[type_image_path]==0.7.4->pandas-profiling) (4.3.1)\n",
-      "Requirement already satisfied: Pillow in /opt/anaconda3/lib/python3.12/site-packages (from visions[type_image_path]==0.7.4->pandas-profiling) (10.3.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (4.51.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (23.2)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=3.2.0->pandas-profiling) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas!=1.0.0,!=1.0.1,!=1.0.2,!=1.1.0,>=0.25.3->pandas-profiling) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/lib/python3.12/site-packages (from pandas!=1.0.0,!=1.0.1,!=1.0.2,!=1.1.0,>=0.25.3->pandas-profiling) (2023.3)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in /opt/anaconda3/lib/python3.12/site-packages (from pydantic>=1.8.1->pandas-profiling) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.14.6 in /opt/anaconda3/lib/python3.12/site-packages (from pydantic>=1.8.1->pandas-profiling) (2.14.6)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in /opt/anaconda3/lib/python3.12/site-packages (from pydantic>=1.8.1->pandas-profiling) (4.11.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.24.0->pandas-profiling) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.24.0->pandas-profiling) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.24.0->pandas-profiling) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.12/site-packages (from requests>=2.24.0->pandas-profiling) (2024.8.30)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib>=3.2.0->pandas-profiling) (1.16.0)\n",
-      "Requirement already satisfied: PyWavelets in /opt/anaconda3/lib/python3.12/site-packages (from imagehash->visions[type_image_path]==0.7.4->pandas-profiling) (1.5.0)\n",
-      "Downloading pandas_profiling-3.2.0-py2.py3-none-any.whl (262 kB)\n",
-      "Downloading tangled_up_in_unicode-0.2.0-py3-none-any.whl (4.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m18.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading visions-0.7.4-py3-none-any.whl (102 kB)\n",
-      "Downloading joblib-1.1.1-py2.py3-none-any.whl (309 kB)\n",
-      "Downloading missingno-0.5.2-py3-none-any.whl (8.7 kB)\n",
-      "Installing collected packages: tangled-up-in-unicode, joblib, visions, missingno, pandas-profiling\n",
-      "  Attempting uninstall: joblib\n",
-      "    Found existing installation: joblib 1.4.2\n",
-      "    Uninstalling joblib-1.4.2:\n",
-      "      Successfully uninstalled joblib-1.4.2\n",
-      "  Attempting uninstall: visions\n",
-      "    Found existing installation: visions 0.7.6\n",
-      "    Uninstalling visions-0.7.6:\n",
-      "      Successfully uninstalled visions-0.7.6\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "scikit-learn 1.4.2 requires joblib>=1.2.0, but you have joblib 1.1.1 which is incompatible.\n",
-      "ydata-profiling 4.12.0 requires visions[type_image_path]<0.7.7,>=0.7.5, but you have visions 0.7.4 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed joblib-1.1.1 missingno-0.5.2 pandas-profiling-3.2.0 tangled-up-in-unicode-0.2.0 visions-0.7.4\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pandas-profiling\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "56d9052d-706c-441d-b28c-96259e419be0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profile = ProfileReport(data, title=\"Data Profiling Report\", explorative=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b95b4266-249a-45fb-b6d0-ae6616ceb5f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a14913dd9a148edacf642fca5030b60",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "profile.to_notebook_iframe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf9a0d16-2e5d-4f8e-aee9-4efc5d66d931",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "profile.to_file(\"data_profiling_report.html\")"
    ]
