adding all models to bias detection

--- a/scripts/model_bias_detection.ipynb
+++ b/scripts/model_bias_detection.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import required libraries\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=UserWarning, module='sklearn')\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -101,99 +103,15 @@
       "\n",
       "Training and evaluating Random Forest...\n",
       "Accuracy for Random Forest: 0.9010695187165776\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Random Forest: 0.2624867724867725\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Random Forest: 0.14285714285714285\n",
-      "    Demographic Parity Difference for SEX using Random Forest: 0.11797328687572589\n",
-      "    Equalized Odds Difference SEX using Random Forest: 0.002020202020202033\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Random Forest: 0.0662962962962963\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Random Forest: 0.75\n",
-      "    Demographic Parity Difference for SEX using Random Forest: 0.0013066202090592227\n",
-      "    Equalized Odds Difference SEX using Random Forest: 0.009256598483067303\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Random Forest: 0.0\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Random Forest: 0.0\n",
-      "    Demographic Parity Difference for SEX using Random Forest: 0.0\n",
-      "    Equalized Odds Difference SEX using Random Forest: 0.0\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Random Forest: 0.32878306878306873\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Random Forest: 0.3076923076923077\n",
-      "    Demographic Parity Difference for SEX using Random Forest: 0.11927990708478514\n",
-      "    Equalized Odds Difference SEX using Random Forest: 0.00900203013142431\n",
       "\n",
       "Training and evaluating SVM...\n",
       "Accuracy for SVM: 0.8676470588235294\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using SVM: 0.27777777777777773\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using SVM: 0.14285714285714285\n",
-      "    Demographic Parity Difference for SEX using SVM: 0.12035423925667826\n",
-      "    Equalized Odds Difference SEX using SVM: 0.022727272727272707\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using SVM: 0.0\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using SVM: 0.0\n",
-      "    Demographic Parity Difference for SEX using SVM: 0.0\n",
-      "    Equalized Odds Difference SEX using SVM: 0.0\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using SVM: 0.0\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using SVM: 0.0\n",
-      "    Demographic Parity Difference for SEX using SVM: 0.0\n",
-      "    Equalized Odds Difference SEX using SVM: 0.0\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using SVM: 0.2777777777777778\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using SVM: 0.16483516483516486\n",
-      "    Demographic Parity Difference for SEX using SVM: 0.12035423925667832\n",
-      "    Equalized Odds Difference SEX using SVM: 0.04155087997882759\n",
       "\n",
-      "Training and evaluating Logistic Regression...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\yutik\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training and evaluating Logistic Regression...\n",
       "Accuracy for Logistic Regression: 0.9090909090909091\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Logistic Regression: 0.28703703703703703\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Logistic Regression: 0.14285714285714285\n",
-      "    Demographic Parity Difference for SEX using Logistic Regression: 0.13016840882694541\n",
-      "    Equalized Odds Difference SEX using Logistic Regression: 0.039393939393939426\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Logistic Regression: 0.12222222222222223\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Logistic Regression: 0.5\n",
-      "    Demographic Parity Difference for SEX using Logistic Regression: 0.010627177700348434\n",
-      "    Equalized Odds Difference SEX using Logistic Regression: 0.08487804878048788\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Logistic Regression: 0.017142857142857144\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Logistic Regression: 0.2857142857142857\n",
-      "    Demographic Parity Difference for SEX using Logistic Regression: 0.002003484320557491\n",
-      "    Equalized Odds Difference SEX using Logistic Regression: 0.125\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using Logistic Regression: 0.397989417989418\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using Logistic Regression: 0.27083333333333337\n",
-      "    Demographic Parity Difference for SEX using Logistic Regression: 0.13879210220673632\n",
-      "    Equalized Odds Difference SEX using Logistic Regression: 0.03966521106259097\n",
       "\n",
       "Training and evaluating XGBoost...\n",
-      "Accuracy for XGBoost: 0.9157754010695187\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using XGBoost: 0.2759259259259259\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using XGBoost: 0.14285714285714285\n",
-      "    Demographic Parity Difference for SEX using XGBoost: 0.12273519163763064\n",
-      "    Equalized Odds Difference SEX using XGBoost: 0.0069323144104803495\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using XGBoost: 0.1277777777777778\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using XGBoost: 0.368421052631579\n",
-      "    Demographic Parity Difference for SEX using XGBoost: 0.006707317073170724\n",
-      "    Equalized Odds Difference SEX using XGBoost: 0.028292682926829293\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using XGBoost: 0.011428571428571429\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using XGBoost: 0.25\n",
-      "    Demographic Parity Difference for SEX using XGBoost: 0.003716608594657375\n",
-      "    Equalized Odds Difference SEX using XGBoost: 0.125\n",
-      "    Demographic Parity Difference for ENROLL_AGE_GROUPS using XGBoost: 0.40185185185185185\n",
-      "    Equalized Odds Difference ENROLL_AGE_GROUPS using XGBoost: 0.22916666666666663\n",
-      "    Demographic Parity Difference for SEX using XGBoost: 0.11231126596980251\n",
-      "    Equalized Odds Difference SEX using XGBoost: 0.023907468746661054\n"
+      "Accuracy for XGBoost: 0.9157754010695187\n"
      ]
     },
     {
@@ -243,6 +161,7 @@
     "            dp_diff = demographic_parity_difference(y_test_binary, y_pred_binary, sensitive_features=sensitive_features_test[feature])\n",
     "            eo_diff = equalized_odds_difference(y_test_binary, y_pred_binary, sensitive_features=sensitive_features_test[feature])\n",
     "\n",
+    "      \n",
     "            \n",
     "            # Group-wise accuracy\n",
     "            metric_frame = MetricFrame(metrics=accuracy_score,\n",
@@ -267,7 +186,7 @@
     "\n",
     "\n",
     "\n",
-    "    # Add the Visualization Function based on accuracy\n",
+    "    # Step 2: Add the Visualization Function\n",
     "def visualize_accuracy_for_models(results, sensitive_features, classes):\n",
     "    \"\"\"\n",
     "    Creates overlapping bar charts for accuracy across all models for each sensitive feature.\n",
